bk_ida/gccida/g1/apply_args_size
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_args_size/src/builtins.c:1352:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_args_size/src/builtins.c:1354:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_args_size/src/builtins.c:1359:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_args_size/src/builtins.c:1360:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_args_size/src/builtins.c:1361:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_args_size/src/builtins.c:1363:6: error: use of undeclared identifier 'size_11'; did you mean 'sizeof'?
if ( size_11 >= 0 ) 
     ^~~~~~~
     sizeof
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_args_size/src/builtins.c:1363:14: error: expected expression
if ( size_11 >= 0 ) 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_args_size/src/builtins.c:1364:8: error: use of undeclared identifier 'size_11'; did you mean 'sizeof'?
return size_11; 
       ^~~~~~~
       sizeof
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_args_size/src/builtins.c:1364:15: error: expected expression
return size_11; 
              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_args_size/src/builtins.c:1366:1: error: use of undeclared identifier 'size_11'
size_11 = v1; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_args_size/src/builtins.c:1368:1: error: use of undeclared identifier 'size_11'
size_11 = 2 * v1; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_args_size/src/builtins.c:1398:28: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( ( unsigned int)( mode_class_0[v3] - 5) >= 2 ) 
                           ^~~~~~~~~~~~
                           mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_args_size/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_args_size/src/builtins.c:1455:6: error: use of undeclared identifier 'size_11'; did you mean 'sizeof'?
if ( size_11 % v8 ) 
     ^~~~~~~
     sizeof
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_args_size/src/builtins.c:1455:14: error: expected expression
if ( size_11 % v8 ) 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_args_size/src/builtins.c:1456:1: error: use of undeclared identifier 'size_11'
size_11 = v8 * ( ( size_11 + v8 - 1) / v8); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_args_size/src/builtins.c:1456:20: error: use of undeclared identifier 'size_11'
size_11 = v8 * ( ( size_11 + v8 - 1) / v8); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_args_size/src/builtins.c:1457:6: error: use of undeclared identifier 'size_11'; did you mean 'sizeof'?
v9 = size_11; 
     ^~~~~~~
     sizeof
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_args_size/src/builtins.c:1457:13: error: expected expression
v9 = size_11; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_args_size/src/builtins.c:1458:28: error: use of undeclared identifier 'size_11'; did you mean 'sizeof'?
apply_args_reg_offset[i] = size_11; 
                           ^~~~~~~
                           sizeof
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_args_size/src/obj/builtins.o] Error 1
